@@ -58,12 +58,10 @@ _function_types = {
     'xmp_files_free' : { 'argstypes' : "XmpFilePtr xf", 'restype' : "bool" },
     'xmp_register_namespace' : { 'argstypes' : "const char *namespaceURI, const char *suggestedPrefix, XmpStringPtr registeredPrefix", 'restype' : "bool" },
     'xmp_namespace_prefix' : { 'argstypes' : "const char *ns, XmpStringPtr prefix", 'restype' : "bool" },
-    'xmp_prefix_namespace_uri' : { 'argstypes' : "const char *prefix, XmpStringPtr ns", 'restype' : "bool" },
     'xmp_new' : { 'argstypes' : "const char *buffer, size_t len", 'restype' : "XmpPtr" },
+    'xmp_prefix_namespace_uri' : { 'argstypes' : "const char *prefix, XmpStringPtr ns", 'restype' : "bool" },
     'xmp_serialize' : { 'argstypes' : "XmpPtr xmp, XmpStringPtr buffer, uint32_t options, uint32_t padding", 'restype' : "bool" },
     'xmp_serialize_and_format' : { 'argstypes' : "XmpPtr xmp, XmpStringPtr buffer, uint32_t options, uint32_t padding, const char *newline, const char *tab, int32_t indent", 'restype' : "bool" },
-    'xmp_get_property_date' : { 'argstypes' : "XmpPtr xmp, const char *schema, const char *name, XmpDateTime * property, uint32_t *propsBits", 'restype' : "bool" },
-    'xmp_set_property_date' : { 'argstypes' : "XmpPtr xmp, const char *schema, const char *name, const XmpDateTime *value,uint32_t optionBits", 'restype' : "bool" },
     'xmp_delete_localized_text' : { 'argstypes' : "XmpPtr xmp, const char *schema,const char *name, const char *genericLang,const char *specificLang", 'restype' : "bool" },
     'xmp_string_new' : { 'argstypes' : "", 'restype' : "XmpStringPtr" },
     'xmp_string_free' : { 'argstypes' : "XmpStringPtr s", 'restype' : "void" },
@@ -84,8 +82,6 @@ _typeconv = {
     'XmpCloseFileOptions' : ctypes.c_int,
     'XmpIterOptions' : ctypes.c_int,
     'size_t' : ctypes.c_ulonglong if is_64 else ctypes.c_uint,
-    'XmpDateTime *' : ctypes.c_void_p,
-    'const XmpDateTime *' : ctypes.c_void_p,
     'uint32_t' : ctypes.c_uint,
     'uint32_t *' : ctypes.c_void_p,
     'int32_t' : ctypes.c_int,
