@@ -2,6 +2,7 @@ Release X.Y.Z ( TBD )
   * Added support for Python 3.3, dropped support for 2.5.
   * Most XMPMeta methods that formerly returned bool now raise exceptions in
     case of failure, except for "does_property_exist", "does_array_item_exist".
+  * Added timezone support for datetime routines.
 Release 1.0.2 ( June 21, 2011 )
   * Fixed python 2.5 issue (ctypes.c_bool are not available in 2.5, so it was changed to ctypes.c_int).
 Release 1.0.1 ( April 11, 2011 )
